menu header, read menu json, section components

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div id='header-container' class='header-container'></div>
+    <div id='carousel-container' class='carousel-container'>Carousel Here</div>
+    <div id='section-about-container' class='section-about-container'></div>
+    <div id='section-pricing-container' class='section-pricing-container'></div>
+    <div id='section-book-container' class='section-book-container'></div>
 
     <script src='./js/master.min.js'></script>
 </body>
