go to menu section, menu item hover, GA.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <meta http-equiv='x-ua-compatible' content='ie-edge'>
-
+    <meta name='description' content='Float Spa and Massage Spa in Salt Lake City, Utah'>
 
     <link rel='stylesheet' href='./css/master.min.css' />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83145270-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-83145270-2');
+    </script>
+
 </head>
 
 <body>
@@ -45,7 +56,7 @@
         </div>
     </div>
     <!-- Explore -->
-    <div class='explore-container'>
+    <div class='explore-container section-about'>
         Explore something new...
     </div>
     <!-- Amenities-->
@@ -73,22 +84,25 @@
         </div>
     </div>-->
     <table class='feel-container'>
-        <td class='feel-wrapper'>
-            <div class='placeholder'></div>
-        </td>
-        <td class='feel-wrapper'>
-            <div class='feel-header'>
-                Start Feeling Better
-            </div>
-            <ul class='feel-list'>
-                <li class='feel-item'>Floating Improves Sleep Quality</li>
-                <li class='feel-item'>Reduces Stress &amp; Anxiety</li>
-                <li class='feel-item'>Relieves Pain &amp; Speed Up Recovery</li>
-                <li class='feel-item'>Great For Pregnancy Aches &amp; Pains</li>
-                <li class='feel-item'>Improves Energy Levels</li>
-            </ul>
-            </div>
-        </td>
+        <tbody>
+            <tr>
+                <td class='feel-wrapper'>
+                    <div class='placeholder'></div>
+                </td>
+                <td class='feel-wrapper'>
+                    <div class='feel-header'>
+                        Start Feeling Better
+                    </div>
+                    <ul class='feel-list'>
+                        <li class='feel-item'>Floating Improves Sleep Quality</li>
+                        <li class='feel-item'>Reduces Stress &amp; Anxiety</li>
+                        <li class='feel-item'>Relieves Pain &amp; Speed Up Recovery</li>
+                        <li class='feel-item'>Great For Pregnancy Aches &amp; Pains</li>
+                        <li class='feel-item'>Improves Energy Levels</li>
+                    </ul>
+                </td>
+            </tr>
+        </tbody>
     </table>
     <!-- join -->
     <div class='join-container clear'>
@@ -113,131 +127,139 @@
         </div>
     </div>
     <!-- package-->
-    <div class='package-container'>
+    <div class='package-container section-packages'>
         <div class='package-heading'>
             Package Information
         </div>
         <table class='package-table'>
-            <td class='package-wrapper'>
-                <div class='package-padder'>
-                    <div class='package-title'>
-                        1st Package Name
-                    </div>
-                    <div class='package-divider'></div>
-                    <ul class='package-list'>
-                        <li class='package-listitem'>
-                            First thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            Second thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            Third thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            If there is more things
-                        </li>
-                        <li class='package-listitem'>
-                            What else does it include?
-                        </li>
-                    </ul>
+            <tbody>
+                <tr>
+                    <td class='package-wrapper'>
+                        <div class='package-padder'>
+                            <div class='package-title'>
+                                1st Package Name
+                            </div>
+                            <div class='package-divider'></div>
+                            <ul class='package-list'>
+                                <li class='package-listitem'>
+                                    First thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    Second thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    Third thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    If there is more things
+                                </li>
+                                <li class='package-listitem'>
+                                    What else does it include?
+                                </li>
+                            </ul>
 
-                    <div class='package-book'>
-                        <button class='btn btn-book'>Book Now</button>
-                    </div>
-                </div>
-            </td>
-            <td class='package-wrapper'>
-                <div class='package-padder'>
-                    <div class='package-title'>
-                        2nd Package Name
-                    </div>
-                    <div class='package-divider'></div>
-                    <ul class='package-list'>
-                        <li class='package-listitem'>
-                            First thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            Second thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            Third thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            If there is more things
-                        </li>
-                        <li class='package-listitem'>
-                            What else does it include?
-                        </li>
-                    </ul>
-                    <div class='package-book'>
-                        <button class='btn btn-book'>Book Now</button>
-                    </div>
-                </div>
-            </td>
-            <td class='package-wrapper'>
-                <div class='package-padder'>
-                    <div class='package-title'>
-                        3rd Package Name
-                    </div>
-                    <div class='package-divider'></div>
-                    <ul class='package-list'>
-                        <li class='package-listitem'>
-                            First thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            Second thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            Third thing in the package
-                        </li>
-                        <li class='package-listitem'>
-                            If there is more things
-                        </li>
-                        <li class='package-listitem'>
-                            What else does it include?
-                        </li>
-                    </ul>
+                            <div class='package-book'>
+                                <button class='btn btn-book'>Book Now</button>
+                            </div>
+                        </div>
+                    </td>
+                    <td class='package-wrapper'>
+                        <div class='package-padder'>
+                            <div class='package-title'>
+                                2nd Package Name
+                            </div>
+                            <div class='package-divider'></div>
+                            <ul class='package-list'>
+                                <li class='package-listitem'>
+                                    First thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    Second thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    Third thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    If there is more things
+                                </li>
+                                <li class='package-listitem'>
+                                    What else does it include?
+                                </li>
+                            </ul>
+                            <div class='package-book'>
+                                <button class='btn btn-book'>Book Now</button>
+                            </div>
+                        </div>
+                    </td>
+                    <td class='package-wrapper'>
+                        <div class='package-padder'>
+                            <div class='package-title'>
+                                3rd Package Name
+                            </div>
+                            <div class='package-divider'></div>
+                            <ul class='package-list'>
+                                <li class='package-listitem'>
+                                    First thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    Second thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    Third thing in the package
+                                </li>
+                                <li class='package-listitem'>
+                                    If there is more things
+                                </li>
+                                <li class='package-listitem'>
+                                    What else does it include?
+                                </li>
+                            </ul>
 
-                    <div class='package-book'>
-                        <button class='btn btn-book'>Book Now</button>
-                    </div>
-                </div>
-            </td>
+                            <div class='package-book'>
+                                <button class='btn btn-book'>Book Now</button>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </div>
     <!-- Contact -->
-    <div class='contact-container'>
+    <div class='contact-container section-contact'>
         <div class='contact-heading'>
             Contact Information
         </div>
         <table class='contact-table'>
-            <td class='contact-wrapper'>
-                <div id='map' class='map'></div>
-            </td>
-            <td class='contact-wrapper'>
-                <div class='contact-padder'>
-                    <div class='contact-label'>Address</div>
-                    <div class='contact-content'>
-                        <p>1212 South State Street</p>
-                        <p>Salt Lake City, UT, 84115</p>
-                    </div>
-                    <div class='contact-label'>Phone Number</div>
-                    <div class='contact-content'>
-                        (801) 906-0627
-                    </div>
-                    <div class='contact-label'>E-mail</div>
-                    <div class='contact-content'>
-                        info@floatspa19.com
-                    </div>
-                </div>
-            </td>
+            <tbody>
+                <tr>
+                    <td class='contact-wrapper'>
+                        <div id='map' class='map'></div>
+                    </td>
+                    <td class='contact-wrapper'>
+                        <div class='contact-padder'>
+                            <div class='contact-label'>Address</div>
+                            <div class='contact-content'>
+                                <p>1212 South State Street</p>
+                                <p>Salt Lake City, UT, 84115</p>
+                            </div>
+                            <div class='contact-label'>Phone Number</div>
+                            <div class='contact-content'>
+                                (801) 906-0627
+                            </div>
+                            <div class='contact-label'>E-mail</div>
+                            <div class='contact-content'>
+                                info@floatspa19.com
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
         </table>
     </div>
     <!-- footer -->
     <div class='footer'>
         Website Designed By:
-        <a href='https://www.mkworldsolutions.com'>MK | World Solutions</a>
+        <a target='_blank' href='https://www.mkworldsolutions.com'>MK | World Solutions</a>
     </div>
 
     <script src='./js/master.min.js'></script>
