Updated header + servivce header

--- a/floating.html
+++ b/floating.html
@@ -31,15 +31,11 @@
             <div class="menu-container">
                 <ul id='menu-list' class="menu-list clear">
                     <li class="menu-item">
-                        <a href='./floating.html' class='menu-link'>Floating</a>
+                        <a href='http://www.floatspa19.com' class='menu-link'>About</a>
                         <div class="menu-hover-id"></div>
                     </li>
-                    <li class="menu-item">
-                        <a href='./massage.html' class='menu-link'>Massage</a>
-                        <div class="menu-hover-id"></div>
-                    </li>
-                    <li class="menu-item">
-                        <a href='./packages.html' class='menu-link'>Packages</a>
+                    <li class="menu-item selected">
+                        <a href='./packages.html' class='menu-link'>Services</a>
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
@@ -54,29 +50,41 @@
         </div>
     </div>
 
-    <!-- join -->
     <div class='body-content-container'>
-        <div class='join-container clear'>
-            <div class='join-wrapper'>
-                <div class='join-padder'>
-                    <div class='join-header'>Join our Float Spa 19 Club</div>
-                    <ul class='join-benefit-list'>
-                        <li class='join-benefit-listitem'>You Can Recieve This</li>
-                        <li class='join-benefit-listitem'>And Also This</li>
-                        <li class='join-benefit-listitem'>How About This, Too.</li>
-                    </ul>
-                </div>
-            </div>
-            <div class='join-wrapper'>
-                <div class='join-padder'>
-                    <label class='join-input-label'>Name</label>
-                    <input type='text' class='join-input join-name' placeholder='Enter your name' />
-                    <label class='join-input-label'>E-mail</label>
-                    <input type='text' class='join-input join-email' placeholder='Enter you E-mail' />
+        <!-- services header-->
+        <div class='services-header-container'>
+            <ul class='services-menu clear'>
+                <li class='services-menu-item'>
+                    <a href='./packages.html' class='services-menu-link'>
+                        Packages
+                        <div class='services-hover-id'></div>
+                    </a>
 
-                </div>
-            </div>
+                </li>
+                <li class='services-menu-item selected'>
+                    <a href='./floating.html' class='services-menu-link'>
+                        Floating
+                        <div class='services-hover-id'></div>
+                    </a>
+
+                </li>
+                <li class='services-menu-item'>
+                    <a href='./hydromassage.html' class='services-menu-link'>
+                        Hydromassage
+                        <div class='services-hover-id'></div>
+                    </a>
+
+                </li>
+                <li class='services-menu-item'>
+                    <a href='./massage.html' class='services-menu-link'>
+                        Body Massage
+                        <div class='services-hover-id'></div>
+                    </a>
+
+                </li>
+            </ul>
         </div>
+
     </div>
 
 
