Updated header + service header

--- a/packages.html
+++ b/packages.html
@@ -31,15 +31,11 @@
             <div class="menu-container">
                 <ul id='menu-list' class="menu-list clear">
                     <li class="menu-item">
-                        <a href='./floating.html' class='menu-link'>Floating</a>
+                        <a href='http://www.floatspa19.com' class='menu-link'>About</a>
                         <div class="menu-hover-id"></div>
                     </li>
-                    <li class="menu-item">
-                        <a href='./massage.html' class='menu-link'>Massage</a>
-                        <div class="menu-hover-id"></div>
-                    </li>
-                    <li class="menu-item">
-                        <a href='./packages.html' class='menu-link'>Packages</a>
+                    <li class="menu-item selected">
+                        <a href='./packages.html' class='menu-link'>Services</a>
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
@@ -53,12 +49,44 @@
             </div>
         </div>
     </div>
+
     <!-- package-->
     <div class='body-content-container'>
+        <!-- services header-->
+        <div class='services-header-container'>
+            <ul class='services-menu clear'>
+                <li class='services-menu-item selected'>
+                    <a href='./packages.html' class='services-menu-link'>
+                        Packages
+                        <div class='services-hover-id'></div>
+                    </a>
+
+                </li>
+                <li class='services-menu-item'>
+                    <a href='./floating.html' class='services-menu-link'>
+                        Floating
+                        <div class='services-hover-id'></div>
+                    </a>
+
+                </li>
+                <li class='services-menu-item'>
+                    <a href='./hydromassage.html' class='services-menu-link'>
+                        Hydromassage
+                        <div class='services-hover-id'></div>
+                    </a>
+
+                </li>
+                <li class='services-menu-item'>
+                    <a href='./massage.html' class='services-menu-link'>
+                        Body Massage
+                        <div class='services-hover-id'></div>
+                    </a>
+
+                </li>
+            </ul>
+        </div>
         <div class='package-container section-packages'>
-            <div class='package-heading'>
-                Package Information
-            </div>
+
             <table class='package-table'>
                 <tbody>
                     <tr>
