updated menu + carousel content + join content

--- a/index.html
+++ b/index.html
@@ -30,16 +30,12 @@
             </div>
             <div class="menu-container">
                 <ul id='menu-list' class="menu-list clear">
-                    <li class="menu-item">
-                        <a href='./floating.html' class='menu-link'>Floating</a>
+                    <li class="menu-item selected">
+                        <a href='http://www.floatspa19.com' class='menu-link'>About</a>
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
-                        <a href='./massage.html' class='menu-link'>Massage</a>
-                        <div class="menu-hover-id"></div>
-                    </li>
-                    <li class="menu-item">
-                        <a href='./packages.html' class='menu-link'>Packages</a>
+                        <a href='./packages.html' class='menu-link'>Services</a>
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
@@ -53,95 +49,27 @@
             </div>
         </div>
     </div>
-    <div id='carousel-container' class='carousel-container'></div>
-    <!-- First Time -->
-    <div class='first-time-container clear'>
-        <div class='first-time-wrapper'>
-            <div class='first-time-padder'>
-                <div class='first-time-header'>
-                    First Time?
-                </div>
-                <div class='first-time-divider'></div>
-                <div class='first-time-content'>
-                    Floating can help you restore your mental clarity and whole body wellness.
-                </div>
-            </div>
+    <div id='carousel-container' class='carousel-container'>
+        <div class='carousel-fade'></div>
+        <div class='carousel-tagline'>
+            Relax, Refresh, and Renew
         </div>
-        <div class='first-time-wrapper'>
-            <div class='first-time-padder'>
-                <div class='first-time-header'>
-                    First Time?
-                </div>
-                <div class='first-time-divider'></div>
-                <div class='first-time-content'>
-                    Floating can help you restore your mental clarity and whole body wellness.
-                </div>
-            </div>
-        </div>
-        <div class='first-time-wrapper'>
-            <div class='first-time-padder'>
-                <button class='btn btn-book btn-lg'>Book Now</button>
-            </div>
+        <div class='carousel-btn-wrapper'>
+            <button class='btn btn-carousel'>Try Today</button>
         </div>
     </div>
-    <!-- Explore -->
-    <div class='explore-container section-about'>
-        Explore something new...
-    </div>
-    <!-- Amenities-->
-    <div class='amenities-container'>
-        We take your experience seriously at Float Spa 19. Enjoy your stay here as you partake in a light snack and...
-    </div>
-    <!-- feel  better
-    <div class='feel-container clear'>
-        <div class='feel-wrapper'>
-            <div class='placeholder'></div>
-        </div>
-        <div class='feel-wrapper'>
-            <div class='feel-padder'>
-                    <div class='feel-header'>
-                            Start Feeling Better
-                        </div>
-                        <ul class='feel-list'>
-                            <li class='feel-item'>Floating Improves Sleep Quality</li>
-                            <li class='feel-item'>Reduces Stress &amp; Anxiety</li>
-                            <li class='feel-item'>Relieves Pain &amp; Speed Up Recovery</li>
-                            <li class='feel-item'>Great For Pregnancy Aches &amp; Pains</li>
-                            <li class='feel-item'>Improves Energy Levels</li>
-                        </ul>
-                    </div>
-        </div>
-    </div>-->
-    <table class='feel-container'>
-        <tbody>
-            <tr>
-                <td class='feel-wrapper'>
-                    <div class='placeholder'></div>
-                </td>
-                <td class='feel-wrapper'>
-                    <div class='feel-header'>
-                        Start Feeling Better
-                    </div>
-                    <ul class='feel-list'>
-                        <li class='feel-item'>Floating Improves Sleep Quality</li>
-                        <li class='feel-item'>Reduces Stress &amp; Anxiety</li>
-                        <li class='feel-item'>Relieves Pain &amp; Speed Up Recovery</li>
-                        <li class='feel-item'>Great For Pregnancy Aches &amp; Pains</li>
-                        <li class='feel-item'>Improves Energy Levels</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+
     <!-- join -->
     <div class='join-container clear'>
         <div class='join-wrapper'>
             <div class='join-padder'>
-                <div class='join-header'>Join our Float Spa 19 Club</div>
+                <div class='join-header'>WANT TO START FEELING YOUR BEST?</div>
+                <div class='join-header'>Sign up today! And you'll recieve:</div>
                 <ul class='join-benefit-list'>
-                    <li class='join-benefit-listitem'>You Can Recieve This</li>
-                    <li class='join-benefit-listitem'>And Also This</li>
-                    <li class='join-benefit-listitem'>How About This, Too.</li>
+
+                    <li class='join-benefit-listitem'>Exclusive Discounts.</li>
+                    <li class='join-benefit-listitem'>The Latest News.</li>
+                    <li class='join-benefit-listitem'>And More.</li>
                 </ul>
             </div>
         </div>
@@ -151,7 +79,12 @@
                 <input type='text' class='join-input join-name' placeholder='Enter your name' />
                 <label class='join-input-label'>E-mail</label>
                 <input type='text' class='join-input join-email' placeholder='Enter you E-mail' />
-
+                <div class='join-btn-container clear'>
+                    <div class='join-btn-info'>We will never spam you</div>
+                    <div class='join-btn-wrapper'>
+                        <button class='btn btn-join'>Submit</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
